# ds-exp

./: Dockerfile  Jenkinsfile  docker_build.properties  pbcopy  pyproject.toml  requirements.txt  sonar-project.properties
deepsearch/: DeepImageSearch.py
meta-data-files/: image_data_features.pkl  image_features_vectors.ann
scripts/: consul_fetch.py  start_server.sh
src/: main.py
src/logging/: configure_logging.py  log_config.json
src/routers/: prediction_route.py  sys_info.py
src/schemas/request/: image_schema.py  path_schema.py
src/services/: prediction.py
