[tool.poetry]
name = "ds-experimenting-isc"
version = "22.10.20.dev1"
description = ""
authors = ["arunkumarc <arun.c@gdn-commerce.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.9"
httpx = "^0.23.0"
loguru = "^0.6.0"
requests = "^2.28.1"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
newrelic = "^8.0.0.179"
pillow = "^9.2.0"
python-multipart = "^0.0.5"
tensorflow = "^2.10.0"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"
annoy = "^1.17.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 10
addopts = "--cov=src tests/ --cov-report xml"

testpaths = "tests"
asyncio_mode = "auto"

[xml]
output = "coverage.xml"